Add two toy steps

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,3 +13,6 @@ jobs:
     steps:
       - name: Echo the message
         run: echo "Ola, que tal?"
+      - name: Data
+        run: date
+      - run: ls -ls
