--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,9 +16,11 @@ jobs:
         with:
           node-version: "14"
       - name: Install dependencies
-        run: npm install --no-audit --no-fund --no-optional
+        run: npm ci
       - name: Lint
         run: npm run eslint
+      - name: Build
+        run: npm run build
       - name: Test
         run: npm run test
       - name: E2E tests
