--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,6 +35,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_email: ${{secrets.HEROKU_API_EMAIL}}
           heroku_app_name: ${{secrets.HEROKU_APP}}
-          healthcheck: "https://${{secrets.HEROKU_APP}}/health"
+          healthcheck: "https://${{secrets.HEROKU_APP}}.herokuapp.com/health"          
           rollbackonhealthcheckfailed: true
 
