--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,8 +2,10 @@ name: Deployment Pipeline
 
 on:
   push:
-    branches:
-    - practice
+    branches: [practice]
+  pull_request:
+    branches: [practice]
+    types: [opened, synchronize]
 
 jobs:
   deploy:
@@ -30,6 +32,7 @@ jobs:
           start: npm run start-test
           wait-on: http://localhost:5000
       - name: Heroku deployment
+        if: ${{github.event_name == push}}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
