--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,6 +57,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
+          cache: "npm"
           node-version: "14"
       - name: Install dependencies
         run: npm ci
@@ -76,6 +77,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
+          cache: "npm"
           node-version: "14"
       - name: Install dependencies
         run: npm ci
@@ -100,8 +102,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - name: Install dependencies
-        run: npm ci
       - name: Heroku deployment
         if: ${{ github.event_name == 'push' }}
         uses: akhileshns/heroku-deploy@v3.12.12
