--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
+          cache: "npm"
           node-version: "14"
       - name: Install dependencies
         run: npm ci
@@ -38,6 +39,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
+          cache: "npm"
           node-version: "14"
       - name: Install dependencies
         run: npm ci
